<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Praise Stamp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete_stamp">도장을 지우시겠습니까?</string>
    <string name="str_yes">예</string>
    <string name="str_no">아니오</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_new_stamp">NewStampActivity</string>
    <string name="stamp_title">Title</string>
    <string name="stamp_present">Present</string>
    <string name="str_register">Register</string>
    <string name="str_goal">Goal</string>
    <string name="str_reset">Reset</string>
    <string name="str_new">New Stamp</string>

</resources>
